--- a/css/style1.css
+++ b/css/style1.css
@@ -1,1 +1,95 @@
+body {
+  font-size: 16px;
+  color: #fff;
+  background-color: #ffffff;
+  font-family: 'Oxygen', sans-serif;
+}
+
+h1 {font-size:35px;
+    color:#000000;
+    font-family: "Oxygen", sans-serif;
+    text-align: center;
+  }
+
+p {font-size: 14px;
+   color: #000000;
+   font-family: "Oxygen, sans-serif";
+ }
+
+h2 {font-size: 20px;
+    color: #000000;
+    font-family: "Oxygen"; sans-serif;
+    text-align: center;
+  }
+ul {
+  list-style-type: none;
+ }
+
+
+/** HEADER **/
+#header-nav {
+  background-color: #7777777;
+  border-radius: 0;
+  border: 0;
+}
+
+#logo-img {
+  background: url('../images/restaurant-logo_large.png') no-repeat;
+  width: 150px;
+  height: 150px;
+  margin: 10px 15px 10px 0;
+}
+
+.navbar-brand {
+  padding-top: 25px;
+}
+
+.navbar-brand h1 { /* Restaurant name */
+  font-family: 'Lora', serif;
+  color: #000000;
+  font-size: 1.5em;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-shadow: 1px 1px 1px #222;
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: .75;
+}
+.navbar-brand a:hover, .navbar-brand a:focus {
+  text-decoration: none;
+}
+.navbar-brand p { /* Kosher cert */
+  color: #000;
+  text-transform: uppercase;
+  font-size: .7em;
+  margin-top: 15px;
+}
+.navbar-brand p span { /* Star-K */
+  vertical-align: middle;
+}
+
+#nav-list {
+  margin-tip: 10px;
+  background-color: #00b3b3;
+  text-align: center;
+}
+#nav-list a{
+  color: #000000;
+  text-align: center;
+}
+#nav-list a span{
+  font-size: 1.8em;
+}
+
+@media only screen and (min-width: 767px) {
+    #nav-list { visibility: hidden; }
+}
+
+
+.navabar-header button.navbar-toggle, .navbar-header .icon-bar {
+  border: 1px solid #000000;
+}
+.navbar-header button.navbar-toggle {
+  clear: both;
+}
 
